fixed navbar so does not cut off header

--- a/themes/good3.css
+++ b/themes/good3.css
@@ -1,61 +1,50 @@
 html {
-    /* background-color: rgb(37, 36, 36); */
-    background-color: rgb(100, 100, 100);
-    
+    background-color: rgb(120, 120, 120); 
 }
+
 body {
     max-width: 1000px;
     height:90%;
     width:85vw;
     margin: auto;
     font-family:'Times New Roman';
-    background-color: rgb(100, 100, 100);
-
-    /* background-color: #04a2ec00; */
-    /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
+    background-color: rgb(120, 120, 120); 
     margin-top:10pt;
-    
-
 }
+
 div.logo {
     box-shadow: 4px 8px 16px 4px rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-
     height:90%;
     width:85vw;
     margin: auto;
     background-color: rgb(75, 75, 75);
     max-width: 1000px;
 }
+
 img.logo_image {
     box-shadow: 4px 8px 16px 4px rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-
     margin:auto;
     height:100%;
     width:100%;
     object-fit:contain;
     border-radius:2pt;
-
 }
 
 nav {
     box-shadow: 4px 8px 16px 4px rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-
-    /* box-shadow: 0 0 2px 2px rgb(37,36,36) inset; */
-
     margin:auto;
     display:flex;
-    background-image: linear-gradient(#313131, #4d4d4d);
+    background-image: linear-gradient(#252525, #404040);
     width:85vw;
     padding-bottom:2.5pt;
     padding-top:2.5pt;
     margin-top: 10pt;
     margin-bottom:10pt;
     max-width: 1000px;
-
     position: sticky;
-    top:0px;
-    
+    top:0;
 }
+
 nav ul {
     margin: auto;
     padding: 0;
@@ -68,6 +57,7 @@ nav ul li {
     padding-right:10pt;
     max-width: 170px;
 }
+
 nav ul li a {
     color: white;
     padding-left:5pt;
@@ -80,27 +70,32 @@ nav ul li a {
 
 nav ul li a:hover {
     color: black;
+    border:2px;
     border-style:solid;
-    border-color:black;/* #44ccb0;*/
+    border-color:black;
     background-color: #04a4ec;
     border-radius: 5pt;
 }
-
 
 div#content {
     width:77%;
     margin:0;
     background-color: transparent;
-    /* box-shadow: 4px 8px 16px 4px rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
-}
-#container {
 
+}
+
+div#content a, a#home{
+    display: block;
+    padding-top: 35pt;
+    margin-top: -35pt;
+}
+
+#container {
     display: flex;
     justify-content: center;
     background-color: rgb(250, 233, 233);
     margin-bottom:15pt;
     margin-right:8pt;
-
     border-radius:3pt;
     box-shadow: 4px 8px 24px 12px rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     max-width: 800px;
@@ -114,7 +109,6 @@ img {
 }
 
 #image {
-    
     width:fit-content;
     padding:15pt;
     max-width:185px;
@@ -125,28 +119,26 @@ img {
     margin-right:10pt;
     max-width: 425px;
 }
+
 #paragraph h1 {
     margin-top: 5pt;
     margin-bottom: -5pt;
     margin-left:30pt;
     font-style:italic;
 }
+
 #paragraph p {
     line-height: 15pt;
-    
 }
 
 .mainpage {
     font-size: clamp(1px, 2vw, 20px);
     display: flex;
-
-    /* background-image: linear-gradient(#4d4d4d, #313131); */
     background-color: transparent;
 }
 
 div.sidebar {
     box-shadow: 4px 8px 16px 4px rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-
     margin-left:5pt;
     margin-bottom:15pt;
     padding-left:5pt;
